Prevent overflowing content on Gecko and Webkit.

--- a/my-component/mixins.scss
+++ b/my-component/mixins.scss
@@ -31,6 +31,7 @@ $navy: #002E5D;
 
 @mixin cardContentSlotted() {
 	width: 100%;
+	box-sizing: border-box;
 	padding: 0 20px !important;
 	color: #444;
 }
